# myocardio3

./: CONTRIBUTING.md  README.org  flake.nix  myocardio.cabal  todo.org
.github/workflows/: build-with-cabal.yaml
app/: DbTest.hs  Main.hs  Util.hs  Views.hs
lib/Myocardio/: AbsoluteWeek.hs  Database.hs  DatabaseNew.hs  DatabaseOld.hs  MapUtils.hs  Statistics.hs
static/: myocardio.js
test/: Main.hs
