cabal-version:  2.2
name:           myocardio
version:        3.1.0
description:    Please see the README on GitHub at <https://github.com/pmiddend/myocardio#readme>
homepage:       https://github.com/pmiddend/myocardio#readme
bug-reports:    https://github.com/pmiddend/myocardio/issues
author:         Philipp Middendorf
maintainer:     pmidden@mailbox.org
copyright:      2025 Philipp Middendorf
license:        GPL-3.0-or-later
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.org

source-repository head
  type: git
  location: https://github.com/pmiddend/myocardio

common warnings
  ghc-options: -Weverything -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-missing-deriving-strategies -Wno-all-missed-specialisations -Wno-monomorphism-restriction -Wno-safe -Wno-missing-local-signatures -Wno-prepositive-qualified-module -threaded -rtsopts -with-rtsopts=-N -Wno-missing-kind-signatures -Wno-missed-specializations

common shared-properties
  default-extensions: BlockArguments
                    , DuplicateRecordFields
                    , OverloadedRecordDot
                    , OverloadedStrings
                    , NoImplicitPrelude
  
library
  import: shared-properties, warnings
  exposed-modules: Myocardio.DatabaseNew
                 , Myocardio.DatabaseOld
                 , Myocardio.MapUtils
  build-depends:    base ^>=4.18.2.1
                  , aeson
                  , text
                  , time
                  , xdg-basedir
                  , safe
                  , unliftio
                  , directory
                  , unliftio-core
                  , containers
                  , sqlite-simple
                  , bytestring
  hs-source-dirs:   lib
  default-language: GHC2021

executable myocardio-exe
  import: shared-properties, warnings
  main-is: Main.hs
  other-modules: Views, Util
  hs-source-dirs: app
  default-language: GHC2021
  build-depends:
      base >=4.7 && <5
    , myocardio
    , text
    , time
    , scotty
    , wai-extra
    , split
    , bytestring
    , containers
    , wai-middleware-static
    , safe
    , lucid2
    , cmark-gfm
    , http-types

test-suite myocardio-tests
  import: shared-properties, warnings
  type: exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          Main.hs

  build-depends:
    base ^>=4.18.2.1,
    myocardio,
    tasty,
    tasty-hunit,
    temporary,
    containers,
    directory,
    time
